fixed editing rent button - changed z-index of hamburger menu to be on top of timeline vertical line - removed z-index from timeline that was not allowing edit button to be pressed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -90,7 +90,6 @@ select {
 .timeline {
   position: relative;
   color: white;
-  z-index: -1;
 }
 
 .timeline:before {
